TP-2937 - fix vertical alignment of logos on desktop
Fix vertical alignment of corporate logos on desktop

--- a/drupal/sites/all/themes/tp4/sass/modules/_footer.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_footer.scss
@@ -153,13 +153,16 @@
                 overflow: hidden;
                 position: relative;
                 top: 0;
+                margin-bottom: 1em;
                 &:first-child {
                     top: 0;
                     margin-right: 64px;
+                    margin-bottom: 1em;
                 }
                 &:nth-child(2) {
                     top: 6px;
                     margin-right: 47px;
+                    margin-bottom: 1em;
                 }
 
                 a {
